fix: restrict overflow

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,7 +1,21 @@
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  overflow-y: hidden;
+}
+
+html body {
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+}
+
 body{
   border: 1px solid red;
   width: 100%;
-  overflow-x: hidden;
 }
 
 .container-mission-image{
@@ -24,7 +38,6 @@ body{
     top: 235px;
     left: 40px;
     z-index: 1;
-    width: 100%;
     background-color: none;
 }
 
@@ -49,6 +62,8 @@ body{
 }
 :hover.container-button button{
   box-shadow: 0px 0px 10px #89DB7B;
+  border: 4px solid #89DB7B;
+  background-color: whitesmoke;
 }
 
 /* .mission {
